# cob_perception_data

cob_perception_data/: package.xml
cob_read_text_data/dictionary/: full-dictionary  haushaltsgegenstaende-dictionary
cob_read_text_data/fonts/: new_correlation.txt  new_correlation_with_index.txt
cob_tesseract_data/tessdata/configs/: letters
