<package>
	<name>cob_perception_data</name>
	<version>0.1.0</version>
	<description>
		data for perception task e.g. training data 
	</description>
	<author>Maintained by Richard Bormann</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<license>LGPL</license>
	<url>http://ros.org/wiki/cob_perception_data</url>
	
	<buildtool_depend>catkin</buildtool_depend>

	<run_depend>cob_read_text_data</run_depend>
	<run_depend>cob_tesseract_data</run_depend>

	<export>
		<metapackage />
	</export>

</package>

